package gui.windows;

import gui.Button;

public class WindowsButton implements Button {
    @Override
    public void paint(){
        System.out.println("Rendering Windows button");
    }
}
